--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "nodejs-template",
-  "version": "1.0.0",
-  "type": "module",
-  "description": "Starting template for Node JS",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Yogendra Rana",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1",
-    "mongodb": "^5.6.0",
-    "mongoose": "^7.3.1",
-    "nodemon": "^3.0.1",
-    "validator": "^13.9.0"
-  }
+    "name": "node-express-auth",
+    "version": "1.0.0",
+    "type": "module",
+    "description": "Starting template for Node JS",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "nodemon server.js"
+    },
+    "author": "Yogendra Rana",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^5.1.0",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.1",
+        "mongodb": "^5.6.0",
+        "mongoose": "^7.3.1",
+        "validator": "^13.9.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.1"
+    }
 }
