--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "jsonwebtoken": "^9.0.1",
         "mongodb": "^5.6.0",
         "mongoose": "^7.3.1",
+        "uuid": "^9.0.1",
         "validator": "^13.9.0"
     },
     "devDependencies": {
